tests/paczka1/fuzzy1/31373868.err
Error in line 10: 41Y A790 82,4
Error in line 12: YKWevxueA S436 24,1
Error in line 35: hGGUi S21 46,2
